src/App.css
:root {
    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
    

}

html {
    height: 100vh;
    background-color: #f0f2f5;
}

body {
    margin: 0;
    padding: 0;

}

a {
    text-decoration: none;
    color: black;
}

.login-container {
    display:grid;
    grid-template-columns: 1fr 1fr;
    height: 100vh;
}

.left-panel, .right-panel {

    display: flex;
    flex-direction: column;
    justify-content: center;
   

}

.left-panel {
    align-items: end; 
    grid-column: 1 / 2;
}

.right-panel {
    align-items: start; 
    grid-column: 2 / 3;
}

.logo-subtitle-container {
    width: 35em;
}

.login-logo {
    height: 7em;
    width: auto;
}

.subtitle {
    margin: 0;
    padding: 0 1.25em;
    font-size: 1.75em;
    font-weight: 100;
}


.login-form-container {
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    padding: 2em;
    background-color: white;
    border-radius: 5px;
    margin-left: 5em;
}


.login-form {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.login-form > input {
    width: 23em;
    height: 3em;
    border: 1px solid #dddfe2;
    border-radius: 5px;
    padding: 0 1em;
}

.login-form > input::placeholder {
    color: #90949c;
    font-size: 1.25em;
}

.login-form > button {
    width: auto;
    height: 2em;
    background-color: #1877f2;
    border: 0;
    border-radius: 5px;
    color: white;
    font-size: 1.25em;
}

.navbar-container {
    position:fixed;
    display: flex;
    justify-content: space-between;
    background-color: white;
    border-bottom: 1px solid #e7e9ec;
    box-shadow: 0px 7px 10px -15px #111;   
    top: 0;
    left: 0;
    right: 0;
    padding-right: 1em;
    z-index: 1;
}

.navbar-logo {
    height: 3.25em;
    width: auto;
}

.nav-picture {
    clip-path: circle();
    width: 2.5em;
}

.nav-links {
    display: flex;
    align-items: center;
    gap: 2em;
}

.menu-container {
    position: fixed;
    top: 0;
    left: 0;
    padding: 4.5em 0 0 1em;
    width: 17em;
}

.mini-menu {
    position: fixed;
    height: 100vh;

}

.mini-menu-background {
    background-color: white;
    width: 3.5em;
    height: 100%;
    border-right: 1px solid #f9fafb;
    
}

.mini-menu-container {
    position: fixed;
    top: 0;
    left: 0;
    padding: 4.5em 0 0 1em;
    background-color: white;

}

.top-menu-list, .bottom-menu-list {
    padding-left: 0em;
    list-style: none;
}


.top-menu-list {
    border-bottom: 1px solid #d0d2d6;
}

.menu-item {
    padding-bottom: 1em;
    font-size: 1em;
    display: flex;
    align-items: center;
    gap: 1em;
}


.icon {
    clip-path: circle();
    width: 1.5em;
}

.user-list-container {
    position: fixed;
    top: 0;
    right: 0;
    padding: 5em 10em 0 0;
}

.contacts-header, .no-contacts{
    margin:0;
    padding-left: 2.25em;
    font-size: 1em;
}

.no-contacts {
    padding-top: 1em;
}

.user-list {
    list-style: none;
}

.user-list-item {
    display:flex;
    align-items: center;
    gap: 1em;
    padding-bottom: 1em;
}

.feed-container {
    background-color: #f0f2f5;
    height: 100vh;
    padding-top: 5em;
}

.feed-center-panel {
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.feed-posts {
}

.make-a-post-container, .post {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: white;
    width: 40em;
    height: 6em;
    border-radius: 5px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
    padding: 1em;

}

.make-a-post-container {
    margin-bottom: 15px;
}

.make-a-post-container > form {
    display:flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    gap: 10px;
}

.user-text-post {
    display: flex;
    align-items: center;
    width: 100%;
    gap: 0.5em;
}

.user-text-input {
    width: 100%;
    height: 100%;
    border-radius: 20px;
    border: none;
    background-color: #f0f2f5;
    padding: 0 1em;
}

.post {
    margin-bottom: 15px;
    height: auto;
    display:flex;
    flex-direction:column;
}

.post-header {
    display: flex;
    align-items: center;
    gap: 1em;
    width: 100%;
}

.post-author-image {
    clip-path: circle();
    width: 2.5em;
}

.post-author-name, .post-age {
    margin: 0;
    padding: 0;
    font-size: 1em;
}

.post-author-name {
    font-weight: bold;
}

.post-age {
    font-size: .9em;
    color: #86878b;
}

.post-text {
    width: 100%;
    font-size: 1em;
}

.post-image {
    width: 100%;
    height: auto;
    padding-bottom: 1em;
}

.post-likes-comments {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;

}

.post-likes {
    display: flex;
    gap: 0.5em;
    padding-bottom: 0.5em;
}

.post-comments-count {
    display: flex;
    justify-content: end;
    gap: 0.5em;
    padding-bottom: 0.5em;
}

.liked-icon {
    height:18px;
    width:18px;
}

.like-count, .comment-count {
    color: #a5a6a8;
}

.post-buttons {

    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2em;
    border-top: 1px solid #d0d2d6;
    padding-top: 1em;
}

.post-btn, .post-btn-disabled {
    display: flex;
    align-items: center;
    gap: 0.5em;
    filter: opacity(75%);
}

.post-btn-disabled {
    pointer-events: none;
}

.post-comments {
    margin-top: 1em;
    border-top: 1px solid #d0d2d6;
    display: flex;
    flex-direction: column;
    width: 100%;
}

.post-comments-hide {
    display: none;
}

.comment {
    display:flex;
    align-items: center;
    width: 100%;
    padding-top: 1em;
    gap: .5em;
    padding-left: .2em;
}

.comment-top {
    display:flex;
    align-items: center;
    gap: .2em;
}

.comment-text-area {
    display:flex;
    flex-direction: column;
    background-color: #f0f2f5;
    width: fit-content;
    border-radius: 22px;
    padding: 0.5em 1em;
}

.comment-author {
    font-weight: bold;
}

.comment-author, .comment-comment, .comment-like-btn {
    font-size: .8em;
}

.comment-like-age {
    
    color: #848484;
    display: flex;
    gap: 1em;
    padding-left: 3.2em;
}

.like-comment {
    font-weight: bold;
}

.like-comment, .comment-age {
    font-size: .8em;
}

.post-comment-author-img{
    clip-path: circle();
    width: 2.0em;
}

.user-post-comment {

    display:flex;
    align-items: center;
    width: 100%;
    padding-top: 1em;
    gap: .5em;
    padding-left: .2em;
}

.user-post-comment-img {
    clip-path: circle();
    width: 2em;
}

.comment-input {
    height: 3em;
}

.comment-button-container {
    text-align: right;
    padding-top: 1em;
}

.profile-header {
    width: 100vw;
    padding: 4.5em 0 1em 4.5em;
    background-color: white;
    border-bottom: 1px solid #f0f2f5;
    display:flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.center-profile-header {
    display:flex;
    justify-content: space-between;
    align-items: center;
    width: 74em
 }

.left-side-profile-header {
    display: flex;
    gap: 1em;
}

.right-side-profile-header {
    height: 12em;
    display: flex;
    flex-direction: column;
    justify-content: end;
    padding-right: .5em;
}

.profile-name {
    padding-top: 1em;
}

.profile-picture {
    clip-path: circle();
    width: 12em;
}

.profile-content {
    width: 100%;
    margin-top: 1em;
    margin-left: 4.5em;

}

.flex-profile-content {
    display: flex;
    gap: 1em;
}



.profile-friends {
    padding: 1em;
    border-radius: 5px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
    background-color: white;
    width: 29em;
    height: fit-content;
}
.friends-header {
    display: flex;
    justify-content: space-between;
    padding-bottom: .5em;
    border-radius: 5px;
    
}

.all-friends-link {
    color: #216fdb;
}

.profile-friends-count {
    padding-bottom: 1em;
    color: #86878b;
}

.profile-friends-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 1em;
    row-gap: 1em;
    height: 100%;
}

.profile-friend-img-container {
    height: 9em;
    width: 9em;
}

.profile-friend-img {
    height: 100%;
    width: 100%;
    object-fit:cover;
    border-radius: 5px;
}

.profile-friend-name {
    margin: 0;
    padding: 0;
    font-weight: bold;
    font-size: .8em;
}

.center-profile-content {
    display:flex;
    justify-content: center;
}

.profile-posts {
    border-radius: 5px;
    width: 40.5em;
    margin-right: 5em;
    margin-left: 1em;

}

.allusers-container {
    padding: 3.5em 0 0 5em;
}

.card-container {
    display:flex;
    flex-wrap: wrap;
    gap: 1em;
}

.user-card {
    width: 12em;
    height: 20em;
    background-color: white;

    display:flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;

    border-radius: 5px;
    overflow: hidden;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.allusers-img-name {

    height: 100%;
}

.allusers-img-container {
    height: 12em;
    width: 12em;

}

.allusers-img {
    height: 100%;
    width: 100%;
    object-fit:cover;
}

.allusers-name {
    padding-left: 1em;
    font-weight: bold;
}

.allusers-btn {
    width: 90%;
    margin-bottom: 1em;
}

